# pelican-obsidian

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _setup.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflow/: test.yml
.github/workflows/: test.yml
pelican/plugins/obsidian/: __init__.py  obsidian.py
pelican/plugins/tests/: test_obsidian.py  test_obsidian_plugin.py
pelican/plugins/tests/fixtures/: black_change_max_line_length.md  black_formatter.md  black_keep_single_strings.md  black_yapf.md  colon_in_prop.md  external_link.md  internal_image.md  internal_link.md  other_list_type.md  tags.md  tags_comma.md  unknown_internal_link.md
