[project]
name = "pelican-obsidian"
version = "0.1.0"
description = "Makes pelican markdown files more compatible with Obsidian"
authors = [
    "Jonathan Sundqvist <jonathan@argpar.se>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/jonathan-s/pelican-obsidian"
repository = "https://github.com/jonathan-s/pelican-obsidian"
documentation = "https://github.com/jonathan-s/pelican-obsidian"

keywords = ["pelican", "obsidian", "plugin"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dependencies]
pelican = "^4.5"

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
