[metadata]
name = pelican-obsidian
description = Makes pelican markdown files more compatible with Obsidian
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jonathan-s/pelican-obsidian
author = Jonathan Sundqvist
author_email = jonathan@argpar.se,
license = MIT
license_file = LICENSE
classifiers =
    Topic :: Software Development
keywords =
    pelican
    obsidian
    plugin
project_urls =
    Documentation = https://github.com/jonathan-s/pelican-obsidian
    Source = https://github.com/jonathan-s/pelican-obsidian
    Tracker = https://github.com/jonathan-s/pelican-obsidian/issues
    Funding = https://github.com/sponsors/jonathan-s

[options]
zip_safe = True
packages = find:
platforms = any
include_package_data = True
install_requires =
    pelican
python_requires = >=3.7
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1
